Ajustes- Estilo das listas e inserção de chefes
Foi alterado o CSS das listas para funcionar melhor em diversas telas. Também foi alterado a forma como ocorre a inserção dos chefes, para quando houver um sem informações aparecer um texto genérico

--- a/css/layout.css
+++ b/css/layout.css
@@ -9,16 +9,18 @@ body{
     color: RGB(171, 150, 111);
 
     font-family: Arial;
-    font-size: 12pt;
+    font-size: 14pt;
 }
 
 h1{
-    padding-left: 8px;
+    margin-left: 8px;
+    margin-bottom: 12px;
 }
 
 li{
+    position: relative;
     margin-bottom: 8px;
-    width: fit-content;
+    width: 100%;
 }
 
 #jogoBase{
